--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# IntelliJ Idea files
+.idea/
+*.iml
+*.ipr
+
 # Compiled class file
 *.class
 
@@ -18,7 +23,36 @@
 *.zip
 *.tar.gz
 *.rar
+*.git
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
+
+# Eclipse m2e generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# Python venv
+.venv/
+
+# MkDocs build files
+site/
+
+# GraphQL config
+graphql.config.yml
+graphql.config.yaml
